Changes to website.

--- a/index.html
+++ b/index.html
@@ -16,105 +16,111 @@
 			<div class="marija">Marija Bogdanovic</div>
 		</div>
 	</div>
-	<!--
-	<div class="row">
-		<div class='twelve columns'>
-			<div class="subtitle">Visual artist from Belgrade</div>
-		</div>
-	</div>
-	-->
-</div>
-
-<div class="menu">
-	<div class="row">
-		<div class='twelve columns'>
-			<a class="menu-item active" href="#">Work</a>
-			<a class="menu-item" href="#">Weblog</a>
-			<a class="menu-item" href="#">About</a>
-		</div>
-	</div>
-</div>
 	
-<div class="work">
+	<div class="row">
+		<div class='twelve columns'>
+			<div class="subtitle">Artist, teacher. Belgrade.</div>
+		</div>
+	</div>
+	
+</div>
 
+
+
+<!-- Work section -->
+<div class="work">
 	<div class="row">
 		<div class='three columns'>
-			<div class="project">
+			<a class="project" href="http://medium.com" target="_blank">
 				<img src="images/project1.png"/>
 				<div class="caption">
 					<div class="title">Swiss dream</div>
 					<div class="year">2013</div>
 				</div>
-			</div>
+			</a>
 		</div>
 
 		<div class='three columns'>
-			<div class="project">
+			<a class="project" href="http://medium.com" target="_blank">
 				<img src="images/project2.png"/>
 				<div class="caption">
 					<div class="title">Candy addicted dream</div>
 					<div class="year">2011</div>
 				</div>
-			</div>
+			</a>
 		</div>
 
 		<div class='three columns'>
-			<div class="project">
+			<a class="project" href="http://medium.com" target="_blank">
 				<img src="images/project3.png"/>
 				<div class="caption">
 					<div class="title">Imaginarium</div>
 					<div class="year">2010</div>
 				</div>
-			</div>
+			</a>
 		</div>
 
 		<div class='three columns'>
-			<div class="project">
+			<a class="project" href="http://medium.com" target="_blank">
 				<img src="images/project1.png"/>
 				<div class="caption">
 					<div class="title">Long time no sea</div>
 					<div class="year">2008</div>
 				</div>
-			</div>
+			</a>
 		</div>
 	</div>
 
 	<div class="row">
 		<div class='three columns'>
-			<div class="project">
+			<a class="project" href="http://medium.com" target="_blank">
 				<img src="images/project1.png"/>
 				<div class="caption">
 					<div class="title">Swiss dream</div>
 					<div class="year">2013</div>
 				</div>
-			</div>
+			</a>
 		</div>
 
 		<div class='three columns'>
-			<div class="project">
+			<a class="project" href="http://medium.com" target="_blank">
 				<img src="images/project2.png"/>
 				<div class="caption">
 					<div class="title">Candy addicted dream</div>
 					<div class="year">2011</div>
 				</div>
-			</div>
+			</a>
 		</div>
 
 		<div class='three columns'>
-			<div class="project">
+			<a class="project" href="http://medium.com" target="_blank">
 				<img src="images/project2.png"/>
 				<div class="caption">
 					<div class="title">Candy addicted dream</div>
 					<div class="year">2011</div>
 				</div>
-			</div>
+			</a>
 		</div>
 
 		<div class='three columns'>
 
 		</div>
 	</div>
+
+
+	<!-- Contact and further information -->
+	<div class="menu">
+		<div class="row">
+			<div class='twelve columns'>
+				<p>
+				Contact me via <a href="mailto:mabogdanovic@gmail.com" target="_blank">email</a>. Also see my jewellery line <a href="facebook.com/studiogulch">Gulch</a>.</p>
+				<p>Below is a selection of my work as an artist:</p>
+			</div>
+		</div>
+	</div>
+
 </div>
+
 
 </body>
 </html>
