--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
 
+<!-- Website Header -->
 <div class="header">
 	<div class="row">
 		<div class='twelve columns'>
@@ -26,86 +27,39 @@
 </div>
 
 
-
 <!-- Work section -->
 <div class="work">
+
+
+	<!-- row 1 -->
 	<div class="row">
+		<!-- col 1 -->
 		<div class='three columns'>
-			<a class="project" href="http://medium.com" target="_blank">
-				<img src="images/project1.png"/>
+			<a class="project" href="https://medium.com/@marijabogdanovic/kroz-vreme-je-ciklus-radova-u-kojima-su-predstavljene-scene-iz-spontanog-kreiranja-vizije-o-ljubavi-48bbcaa73da" target="_blank">
+				<img src="images/kroz-vreme-cover.png"/>
 				<div class="caption">
-					<div class="title">Swiss dream</div>
-					<div class="year">2013</div>
+					<div class="title">Kroz Vreme</div>
+					<div class="year">2007</div>
 				</div>
 			</a>
 		</div>
 
+		<!-- col 2 -->
 		<div class='three columns'>
-			<a class="project" href="http://medium.com" target="_blank">
-				<img src="images/project2.png"/>
-				<div class="caption">
-					<div class="title">Candy addicted dream</div>
-					<div class="year">2011</div>
-				</div>
-			</a>
+			<!-- empty -->
 		</div>
 
+		<!-- col 3 -->
 		<div class='three columns'>
-			<a class="project" href="http://medium.com" target="_blank">
-				<img src="images/project3.png"/>
-				<div class="caption">
-					<div class="title">Imaginarium</div>
-					<div class="year">2010</div>
-				</div>
-			</a>
+			<!-- empty -->
 		</div>
 
+		<!-- col 4 -->
 		<div class='three columns'>
-			<a class="project" href="http://medium.com" target="_blank">
-				<img src="images/project1.png"/>
-				<div class="caption">
-					<div class="title">Long time no sea</div>
-					<div class="year">2008</div>
-				</div>
-			</a>
+			<!-- empty -->
 		</div>
 	</div>
 
-	<div class="row">
-		<div class='three columns'>
-			<a class="project" href="http://medium.com" target="_blank">
-				<img src="images/project1.png"/>
-				<div class="caption">
-					<div class="title">Swiss dream</div>
-					<div class="year">2013</div>
-				</div>
-			</a>
-		</div>
-
-		<div class='three columns'>
-			<a class="project" href="http://medium.com" target="_blank">
-				<img src="images/project2.png"/>
-				<div class="caption">
-					<div class="title">Candy addicted dream</div>
-					<div class="year">2011</div>
-				</div>
-			</a>
-		</div>
-
-		<div class='three columns'>
-			<a class="project" href="http://medium.com" target="_blank">
-				<img src="images/project2.png"/>
-				<div class="caption">
-					<div class="title">Candy addicted dream</div>
-					<div class="year">2011</div>
-				</div>
-			</a>
-		</div>
-
-		<div class='three columns'>
-
-		</div>
-	</div>
 
 
 	<!-- Contact and further information -->
