Added new project.

--- a/index.html
+++ b/index.html
@@ -17,23 +17,35 @@
 			<div class="marija">Marija Bogdanovic</div>
 		</div>
 	</div>
-	
+
 	<div class="row">
 		<div class='twelve columns'>
 			<div class="subtitle">Artist, teacher. Belgrade.</div>
 		</div>
 	</div>
-	
+
 </div>
 
 
 <!-- Work section -->
 <div class="work">
 
-
-	<!-- row 1 -->
+	<!-- ROW / do not edit -->
 	<div class="row">
-		<!-- col 1 -->
+    <!-- Place projects here -->
+
+    <!-- Project -->
+    <div class='three columns'>
+      <a class="project" href="https://medium.com/@marijabogdanovic/kroz-vreme-je-ciklus-radova-u-kojima-su-predstavljene-scene-iz-spontanog-kreiranja-vizije-o-ljubavi-48bbcaa73da" target="_blank">
+        <img src="images/za-juce-danas-sutra.jpg"/>
+        <div class="caption">
+          <div class="title">Za juce danas i sutra</div>
+          <div class="year">2015</div>
+        </div>
+      </a>
+    </div>
+
+    <!-- Project -->
 		<div class='three columns'>
 			<a class="project" href="https://medium.com/@marijabogdanovic/kroz-vreme-je-ciklus-radova-u-kojima-su-predstavljene-scene-iz-spontanog-kreiranja-vizije-o-ljubavi-48bbcaa73da" target="_blank">
 				<img src="images/kroz-vreme-cover.png"/>
@@ -42,25 +54,9 @@
 					<div class="year">2007</div>
 				</div>
 			</a>
-		</div>
+    </div>
 
-		<!-- col 2 -->
-		<div class='three columns'>
-			<!-- empty -->
-		</div>
-
-		<!-- col 3 -->
-		<div class='three columns'>
-			<!-- empty -->
-		</div>
-
-		<!-- col 4 -->
-		<div class='three columns'>
-			<!-- empty -->
-		</div>
-	</div>
-
-
+	</div> <!-- End of row -->
 
 	<!-- Contact and further information -->
 	<div class="menu">
@@ -68,7 +64,6 @@
 			<div class='twelve columns'>
 				<p>
 				Contact me via <a href="mailto:mabogdanovic@gmail.com" target="_blank">email</a>. Also see my jewellery line <a href="facebook.com/studiogulch">Gulch</a>.</p>
-				<p>Below is a selection of my work as an artist:</p>
 			</div>
 		</div>
 	</div>
