--- a/index.html
+++ b/index.html
@@ -36,11 +36,22 @@
 
     <!-- Project -->
     <div class='three columns'>
-      <a class="project" href="https://medium.com/@marijabogdanovic/kroz-vreme-je-ciklus-radova-u-kojima-su-predstavljene-scene-iz-spontanog-kreiranja-vizije-o-ljubavi-48bbcaa73da" target="_blank">
+      <a class="project" href="https://medium.com/@marijabogdanovic/za-juce-za-danas-i-sutra-afe0f5908bcc" target="_blank">
         <img src="images/za-juce-danas-sutra.jpg"/>
         <div class="caption">
           <div class="title">Za juce danas i sutra</div>
           <div class="year">2015</div>
+        </div>
+      </a>
+    </div>
+
+    <!-- Project -->
+    <div class='three columns'>
+      <a class="project" href="https://medium.com/@marijabogdanovic/magnolija-2e19f8031dce" target="_blank">
+        <img src="images/magnolia.jpg"/>
+        <div class="caption">
+          <div class="title">Magnolia</div>
+          <div class="year">2008</div>
         </div>
       </a>
     </div>
